manifests/mosmix/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosmix-api
  namespace: mosmix
  labels:
    app: mosmix-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosmix-api
  template:
    metadata:
      labels:
        app: mosmix-api
    spec:
      volumes:
      - name: caddy-tmp-volume
        emptyDir:
          medium: Memory
      containers:
      - name: mosmix-api
        image: quay.io/codeformuenster/mosmix-api:v20180807-1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: caddy-tmp-volume
          mountPath: /root/.caddy
