manifests/mosmix/mosmix-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosmix
  namespace: mosmix
  labels:
    app: mosmix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosmix
  template:
    metadata:
      labels:
        app: mosmix
    spec:
      containers:
      - name: mosmix
        image: quay.io/codeformuenster/mosmix-api:v20180807-1
        ports:
        - name: api
          containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: caddy-tmp-volume
          mountPath: /root/.caddy
      volumes:
      - name: caddy-tmp-volume
        emptyDir:
          medium: Memory
