manifests/mosmix/postgis-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgis
  namespace: mosmix
  labels:
    app: postgis
spec:
  selector:
    matchLabels:
      app: postgis # has to match .spec.template.metadata.labels
  replicas: 1 # by default is 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgis # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgis
        image: mdillon/postgis:10-alpine
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            memory: "2048Mi"
            cpu: "2500m"
            ephemeral-storage: "15Gi"
          limits:
            cpu: "5000m"
            ephemeral-storage: "20Gi"
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: postgresql-db
      volumes:
      # - name: pgdata
      #   emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: postgis-data
