manifests/mosmix/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mosmix-api
  namespace: mosmix
  labels:
    app: mosmix-api
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: mosmix-api
