manifests/mosmix/mosmix-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mosmix
  namespace: mosmix
  labels:
    app: mosmix
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: mosmix
