manifests/mosmix/postgis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mosmix-postgis
  labels:
    app: mosmix-postgis
spec:
  ports:
  - port: 5432
    protocol: TCP
    name: postgres
  selector:
    app: mosmix-postgis
