manifests/mosmix/mosmix-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mosmix
  namespace: mosmix
  labels:
    app: mosmix
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: mosmix-api.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: mosmix
          servicePort: 3000
          # servicePort: api
        path: /
  tls:
  - secretName: mosmix-api-tls
    hosts:
    - mosmix-api.codeformuenster.org
